--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,13 @@ poem = "3.1.12"
 poem-openapi = "5.1.16"
 tokio = { version = "1.47.2", features = ["macros", "rt-multi-thread"] }
 dotenv = "0.15.0"
+sea-orm = { version = "2.0.0-rc", features = [
+  "runtime-tokio-rustls",
+  "sqlx-postgres",
+  "macros",
+  "debug-print",
+  "mock",
+] }
 
 [workspace.lints.clippy]
 unwrap_used = "deny"
