--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ sea-orm = { version = "2.0.0-rc", features = [
   "debug-print",
   "mock",
 ] }
+thiserror = "2.0.17"
 
 [workspace.lints.clippy]
 unwrap_used = "deny"
